point goreleaser at fork and remove risky files

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,7 +34,7 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/stripe/stripe-cli
+    local-prefixes: github.com/suz-stripe/stripe-cli
   misspell:
     locale: US
 
