--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,7 @@ project_name: stripe
 builds:
   - id: stripe-darwin
     ldflags:
-      - -s -w -X github.com/stripe/stripe-cli/pkg/version.Version={{.Version}}
+      - -s -w -X github.com/suz-stripe/stripe-cli/pkg/version.Version={{.Version}}
     binary: stripe
     env:
       - CGO_ENABLED=1
@@ -21,7 +21,7 @@ builds:
       - amd64
   - id: stripe-linux
     ldflags:
-      - -s -w -X github.com/stripe/stripe-cli/pkg/version.Version={{.Version}}
+      - -s -w -X github.com/suz-stripe/stripe-cli/pkg/version.Version={{.Version}}
     binary: stripe
     env:
       - CGO_ENABLED=0
@@ -32,7 +32,7 @@ builds:
       - amd64
   - id: stripe-windows
     ldflags:
-      - -s -w -X github.com/stripe/stripe-cli/pkg/version.Version={{.Version}}
+      - -s -w -X github.com/suz-stripe/stripe-cli/pkg/version.Version={{.Version}}
     binary: stripe
     env:
       - CGO_ENABLED=1
@@ -84,8 +84,8 @@ nfpms:
 brews:
   -
     github:
-      owner: stripe
-      name: homebrew-stripe-cli
+      owner: suz-stripe
+      name: cli-pkg-mngr-testing/brew
     commit_author:
       name: stripe-ci
       email: support@stripe.com
@@ -109,29 +109,11 @@ brews:
     caveats: "❤ Thanks for installing the Stripe CLI! If this is your first time using the CLI, be sure to run `stripe login` first."
 scoop:
   bucket:
-    owner: stripe
-    name: scoop-stripe-cli
+    owner: suz-stripe
+    name: cli-pkg-mngr-testing/scoop
   commit_author:
     name: stripe-ci
     email: support@stripe.com
   homepage:  https://stripe.com
   description: Stripe CLI utility
   license: Apache 2.0
-dockers:
-  - goos: linux
-    goarch: amd64
-    binaries:
-    - stripe
-    builds:
-    - stripe-linux
-    image_templates:
-    - "stripe/stripe-cli:latest"
-    - "stripe/stripe-cli:{{ .Tag }}"
-    build_flag_templates:
-    - "--pull"
-    - "--label=org.opencontainers.image.created={{.Date}}"
-    - "--label=org.opencontainers.image.name={{.ProjectName}}"
-    - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-    - "--label=org.opencontainers.image.version={{.Version}}"
-    - "--label=repository=https://github.com/stripe/stripe-cli"
-    - "--label=homepage=https://stripe.com"
