--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         run: make setup
       -
         name: Run goreleaser
-        uses: mailchain/goreleaser-xcgo@v0.10.0
+        run: echo $BUILD_PLS_DIR; docker run -e GITHUB_TOKEN=$GITHUB_TOKEN --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock -w $BUILD_PLS_DIR mailchain/goreleaser-xcgo --rm-dist
+        shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BUILD_PLS_DIR: ${{ github.workspace }}
