--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -87,8 +87,8 @@ brews:
       owner: suz-stripe
       name: cli-pkg-mngr-testing
     commit_author:
-      name: stripe-ci
-      email: support@stripe.com
+      name: suz-stripe
+      email: suz@stripe.com
     homepage:  https://stripe.com
     description: Stripe CLI utility
     folder: brew
@@ -114,8 +114,8 @@ scoop:
     owner: suz-stripe
     name: cli-pkg-mngr-testing
   commit_author:
-    name: stripe-ci
-    email: support@stripe.com
+    name: suz-stripe
+    email: suz@stripe.com
   homepage:  https://stripe.com
   description: Stripe CLI utility
   license: Apache 2.0
